--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "scripts": {
-    "start": "node ./bin/www"
-  },
+"scripts": {
+  "start": "node ./bin/www",
+  "dev": "nodemon ./bin/www"
+},
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cookie-parser": "~1.4.4",
